# mipt-metaprog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
hw_1/: Command.h  Controller.cpp  Controller.h  Executor.h  IOProcessor.cpp  IOProcessor.h  Mediator.cpp  Mediator.h  Proxy.h  Storage.cpp  Storage.h  Strategy.h  hardcoded_settings.h  main.cpp
hw_2/: Fibonacci.h  GenLinearF.h  GenScatterF.h  InheritanceContainer.h  TypeList.h  TypeNull.h  main.cpp
hw_3/: DecompressionFunctors.h  DummyCharDecompressor.h  NoneType.h  ProcessorAdvancedDecompression.h  ProcessorDecompression.h  Reader.h  TypeList.h  main.cpp
